massive refactoring and resulting failure by opencode to resolve primitive mappings, defeated by the reflective nature.